Todo testing unitario del proyecto. Covertura: 100% de las clases, 95% de los métodos y 96% de las líneas